# openknowit_kalm

./: .gitignore  .hybel.swp  Jenkinsfile  LICENSE.txt  README.md  build.sh  demo.json  inabox.json.template  initrole.sh  myenv.txt  netdemo.py  pyproject.toml  refresh.sh  requirements.txt  signsshold  sshpubkeymeta.py  test.py
UNKNOWN.egg-info/: SOURCES.txt
etc/kalm/: kalm.json  myenv.txt  netbox.json  zabbix.json  zabbix.json.template
etc/kalm/conf.d/: Unix Ansible Automation.json  bootstrap.json  checkmk.json  core.json  invsync.json  netbox.json  tsm.json  zabbix.json
src/inabox/: __init__.py  inabox.py
src/jenkins/: jenkins.py
src/kalm/: __init__.py  common.py  inabox.py  jenkins.py  kalm.py  kalm.py.old  kalm_inabox.py  semapore.sh
src/kalm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/kalm/airflow/: __init__.py  airflow.py
src/kalm/awx/: awx_common.py  awx_credential.py  awx_executionenvironments.py  awx_hosts.py  awx_organisation.py  awx_project.py  common.py  create_credential.py  credential.py
src/kalm/bump/: __init__.py  bump.py
src/kalm/dns/: __init__.py  cloudflare.py  dns.py
src/kalm/gitea/: __init__.py  git.py  git.save.py  gitea.py
src/kalm/inabox/: __init__.py  inabox.py  virtlib.py
src/kalm/inthevault/: __init__.py  inthevault.py
src/kalm/jenkins/: __init__.py  jenkins.py
src/kalm/libvirt/: __init__.py  serve.py
src/kalm/netbox/: __init__.py  clusters.py  common.py  netbox.py  netbox_ipaddress.py  netbox_server.py  organization.py  redis.py  serve.py  subprojects.py
src/kalm/netbox/terraform/cmdb/: clustergroups.tf  clusters.tf  clustertypes.tf  demoserver.tf  devices.tf  locations.tf  racks.tf  regions.tf  sites.tf  tenants.tf
src/kalm/netbox/terraform/terraform.d/: checkpoint_cache  checkpoint_signature
src/kalm/pitv/: __init__.py  pitv.py
src/kalm/pypi/: __init__.py  pypi.py
src/kalm/semaphore/: __init__.py  semaphore.py  serve.py
src/kalm/ssh/: __init__.py  ssh.py
src/kalm/traefik/: __init__.py  traefik.py
src/kalm/ui/: serve.py  ui.py
src/kalm/ui/project/: nginx.conf.j2  playbook.yml  testupload.py
src/kalm/ui/project/ignite/: .mail.swp  gunicorn.conf  manage.py
src/kalm/ui/project/ignite/ansible/: apps.py
src/kalm/ui/project/ignite/ignite/: asgi.py  settings.py  urls.py  wsgi.py
src/kalm/ui/project/ignite/main/: admin.py  models.py  urls.py  views.py
src/kalm/ui/project/ignite/main/templates/: base.html  projectdetail.html  projects.html
src/kalm/ui/project/ignite/selinux/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
src/kalm/ui/project/ignite/selinux/migrations/: 0001_initial.py
src/kalm/ui/project/ignite/selinux/templates/: SetroubleshootEntry_list.html  SetroubleshootEntry_list_full.html  base.html  host_message_sugestion_template.html  host_message_template.html  message_list.html  selinux_event_list copy.html  selinux_list.html  suggestion_list.html
src/kalm/ui/project/ignite/templates/: nginx.conf.j2
src/kalm/vault/: __init__.py  vault.py
src/kalm/vmware/: __init__.py  requirements.txt  serve.py  vmware.py
src/kalm/vmware/tools/: service_instance.py
src/kalm/wireguard/: __init__.py  wireguard.py
src/kalm/zabbix/: __init__.py  common.py  zabbix.py
src/kalmproject.egg-info/: PKG-INFO  SOURCES.txt
src/sampleproject.egg-info/: PKG-INFO  SOURCES.txt
src/toolbox/: toolbox.py
tests/: test_simple.py
tmp/: getpsk.py  zabbix.py
